btn-primary overriden + the container contents no longer hidden under the navbar

--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -6,3 +6,13 @@
 
 @import "pizza/pizza-card";
 @import "navbar";
+
+.btn-primary {
+     background-color: @primary-colour;
+     color: white;        
+     border-color: @border-primary-colour;
+}
+
+.container {    
+    padding-top: 80px;    
+}
