--- a/Frontend/www/assets/less/navbar.less
+++ b/Frontend/www/assets/less/navbar.less
@@ -62,10 +62,7 @@
     
     #login {
         float: right;
-        background-color: @primary-colour;
-        color: white;
         margin-bottom: 4px;
-        border-color: @border-primary-colour;
     }
     
     .hor-line {
@@ -80,8 +77,4 @@
         padding: 0; 
     }
     }
-}
-
-.container {
-    
 }
